// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controller. get-user-info Должен вернуть 401 при ответе паспорта о невалидной авторизации 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "localhost:8001",
      "user-agent": "got/9.6.0 (https://github.com/sindresorhus/got)",
    },
    "method": "GET",
    "type": "REQUEST",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
  Object {
    "body": Object {
      "blackbox": Object {
        "ticket": "blackbox-service-ticket",
      },
      "geocoder": Object {
        "ticket": "geocoder-service-ticket",
      },
      "persAddress": Object {
        "ticket": "persAddress-service-ticket",
      },
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "GET",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip,deflate",
      "host": "blackbox-test.yandex.net",
      "user-agent": "got/6.7.1 (https://github.com/sindresorhus/got)",
      "x-ya-service-ticket": "blackbox-service-ticket",
    },
    "method": "GET",
    "type": "REQUEST",
    "url": "http://blackbox-test.yandex.net/blackbox?method=sessionid&format=json&attributes=1008&regname=yes&getServiceTicket=&oauth=true&phones=&sessionid=12345&sslsessionid=&userip=%3A%3Affff%3A127.0.0.1&host=127.0.0.1&get_user_ticket=yes",
  },
  Object {
    "body": Object {
      "attributes": Object {
        "1008": "test-user",
      },
      "display_name": Object {
        "avatar": Object {
          "default": "1/2-3",
          "empty": false,
        },
        "name": "Test User",
      },
      "error": "OK",
      "login": "test-user",
      "regname": "test-user",
      "status": Object {
        "value": "INVALID",
      },
      "user_ticket": "tvm-user-ticket",
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "GET",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://blackbox-test.yandex.net/blackbox?method=sessionid&format=json&attributes=1008&regname=yes&getServiceTicket=&oauth=true&phones=&sessionid=12345&sslsessionid=&userip=%3A%3Affff%3A127.0.0.1&host=127.0.0.1&get_user_ticket=yes",
  },
]
`;

exports[`Controller. get-user-info Должен вернуть 401 при отсутствии Session_id куки 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "localhost:8001",
      "user-agent": "got/9.6.0 (https://github.com/sindresorhus/got)",
    },
    "method": "GET",
    "type": "REQUEST",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
  Object {
    "body": Object {
      "blackbox": Object {
        "ticket": "blackbox-service-ticket",
      },
      "geocoder": Object {
        "ticket": "geocoder-service-ticket",
      },
      "persAddress": Object {
        "ticket": "persAddress-service-ticket",
      },
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "GET",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
]
`;

exports[`Controller. get-user-info Должен вернуть 500 при падении паспорта 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "localhost:8001",
      "user-agent": "got/9.6.0 (https://github.com/sindresorhus/got)",
    },
    "method": "GET",
    "type": "REQUEST",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
  Object {
    "body": Object {
      "blackbox": Object {
        "ticket": "blackbox-service-ticket",
      },
      "geocoder": Object {
        "ticket": "geocoder-service-ticket",
      },
      "persAddress": Object {
        "ticket": "persAddress-service-ticket",
      },
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "GET",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip,deflate",
      "host": "blackbox-test.yandex.net",
      "user-agent": "got/6.7.1 (https://github.com/sindresorhus/got)",
      "x-ya-service-ticket": "blackbox-service-ticket",
    },
    "method": "GET",
    "type": "REQUEST",
    "url": "http://blackbox-test.yandex.net/blackbox?method=sessionid&format=json&attributes=1008&regname=yes&getServiceTicket=&oauth=true&phones=&sessionid=12345&sslsessionid=&userip=%3A%3Affff%3A127.0.0.1&host=127.0.0.1&get_user_ticket=yes",
  },
  Object {
    "body": Object {
      "attributes": Object {
        "1008": "test-user",
      },
      "display_name": Object {
        "avatar": Object {
          "default": "1/2-3",
          "empty": false,
        },
        "name": "Test User",
      },
      "error": "OK",
      "login": "test-user",
      "regname": "test-user",
      "status": Object {
        "value": "INVALID",
      },
      "user_ticket": "tvm-user-ticket",
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "GET",
    "statusCode": 500,
    "type": "RESPONSE",
    "url": "http://blackbox-test.yandex.net/blackbox?method=sessionid&format=json&attributes=1008&regname=yes&getServiceTicket=&oauth=true&phones=&sessionid=12345&sslsessionid=&userip=%3A%3Affff%3A127.0.0.1&host=127.0.0.1&get_user_ticket=yes",
  },
]
`;

exports[`Controller. get-user-info Должен вернуть минимальную информацию о пользователе 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "localhost:8001",
      "user-agent": "got/9.6.0 (https://github.com/sindresorhus/got)",
    },
    "method": "GET",
    "type": "REQUEST",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
  Object {
    "body": Object {
      "blackbox": Object {
        "ticket": "blackbox-service-ticket",
      },
      "geocoder": Object {
        "ticket": "geocoder-service-ticket",
      },
      "persAddress": Object {
        "ticket": "persAddress-service-ticket",
      },
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "GET",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip,deflate",
      "host": "blackbox-test.yandex.net",
      "user-agent": "got/6.7.1 (https://github.com/sindresorhus/got)",
      "x-ya-service-ticket": "blackbox-service-ticket",
    },
    "method": "GET",
    "type": "REQUEST",
    "url": "http://blackbox-test.yandex.net/blackbox?method=sessionid&format=json&attributes=1008&regname=yes&getServiceTicket=&oauth=true&phones=&sessionid=12345&sslsessionid=&userip=%3A%3Affff%3A127.0.0.1&host=127.0.0.1&get_user_ticket=yes",
  },
  Object {
    "body": Object {
      "attributes": Object {},
      "display_name": Object {
        "avatar": Object {
          "empty": false,
        },
      },
      "error": "OK",
      "status": Object {
        "value": "VALID",
      },
      "uid": Object {
        "hosted": false,
        "lite": false,
        "value": "123",
      },
      "user_ticket": "tvm-user-ticket",
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "GET",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://blackbox-test.yandex.net/blackbox?method=sessionid&format=json&attributes=1008&regname=yes&getServiceTicket=&oauth=true&phones=&sessionid=12345&sslsessionid=&userip=%3A%3Affff%3A127.0.0.1&host=127.0.0.1&get_user_ticket=yes",
  },
]
`;

exports[`Controller. get-user-info Должен вернуть полную информацию о пользователе 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "localhost:8001",
      "user-agent": "got/9.6.0 (https://github.com/sindresorhus/got)",
    },
    "method": "GET",
    "type": "REQUEST",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
  Object {
    "body": Object {
      "blackbox": Object {
        "ticket": "blackbox-service-ticket",
      },
      "geocoder": Object {
        "ticket": "geocoder-service-ticket",
      },
      "persAddress": Object {
        "ticket": "persAddress-service-ticket",
      },
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "GET",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip,deflate",
      "host": "blackbox-test.yandex.net",
      "user-agent": "got/6.7.1 (https://github.com/sindresorhus/got)",
      "x-ya-service-ticket": "blackbox-service-ticket",
    },
    "method": "GET",
    "type": "REQUEST",
    "url": "http://blackbox-test.yandex.net/blackbox?method=sessionid&format=json&attributes=1008&regname=yes&getServiceTicket=&oauth=true&phones=&sessionid=12345&sslsessionid=&userip=%3A%3Affff%3A127.0.0.1&host=127.0.0.1&get_user_ticket=yes",
  },
  Object {
    "body": Object {
      "attributes": Object {
        "1008": "test-user",
      },
      "display_name": Object {
        "avatar": Object {
          "default": "1/2-3",
          "empty": false,
        },
        "name": "Test User",
      },
      "error": "OK",
      "login": "test-user",
      "regname": "test-user",
      "status": Object {
        "value": "VALID",
      },
      "uid": Object {
        "hosted": false,
        "lite": false,
        "value": "123",
      },
      "user_ticket": "tvm-user-ticket",
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "GET",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://blackbox-test.yandex.net/blackbox?method=sessionid&format=json&attributes=1008&regname=yes&getServiceTicket=&oauth=true&phones=&sessionid=12345&sslsessionid=&userip=%3A%3Affff%3A127.0.0.1&host=127.0.0.1&get_user_ticket=yes",
  },
]
`;

exports[`Controller. get-user-info Должен корректно обработать запрос типа OPTIONS 1`] = `Array []`;

exports[`Controller. get-user-info Должен падать при отсутствии тикета TVM для blackbox 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "localhost:8001",
      "user-agent": "got/9.6.0 (https://github.com/sindresorhus/got)",
    },
    "method": "GET",
    "type": "REQUEST",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
  Object {
    "body": Object {
      "blackbox": Object {
        "ticket": "",
      },
      "geocoder": Object {
        "ticket": "geocoder-service-ticket",
      },
      "persAddress": Object {
        "ticket": "persAddress-service-ticket",
      },
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "GET",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://localhost:8001/tvm/tickets?dsts=blackbox%2Cgeocoder%2CpersAddress&src=tapBackend",
  },
]
`;
